--- a/iOSMove/Base.lproj/Main.storyboard
+++ b/iOSMove/Base.lproj/Main.storyboard
@@ -49,7 +49,52 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1822" y="-441"/>
+            <point key="canvasLocation" x="1614" y="-1089"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="U34-cS-CfC">
+            <objects>
+                <viewController id="gJ3-Lc-5VU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aht-NK-Fji"/>
+                        <viewControllerLayoutGuide type="bottom" id="qM6-bq-K2R"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LMB-7V-yyA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tHn-OE-KJe">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="lMJ-GS-GuY"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Settings" id="kw2-ml-udZ"/>
+                                </items>
+                            </navigationBar>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vvR-il-4RF">
+                                <rect key="frame" x="0.0" y="44" width="600" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="5Bq-QP-h8H"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="tHn-OE-KJe" secondAttribute="trailing" constant="-20" id="9sf-sK-ve6"/>
+                            <constraint firstItem="tHn-OE-KJe" firstAttribute="leading" secondItem="LMB-7V-yyA" secondAttribute="leadingMargin" constant="-20" id="Eo8-1l-yGi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vvR-il-4RF" secondAttribute="trailing" constant="-20" id="IhD-OB-okU"/>
+                            <constraint firstItem="vvR-il-4RF" firstAttribute="top" secondItem="tHn-OE-KJe" secondAttribute="bottom" constant="20" id="Ii2-e6-xwh"/>
+                            <constraint firstItem="tHn-OE-KJe" firstAttribute="centerX" secondItem="LMB-7V-yyA" secondAttribute="centerX" id="stb-jL-rY0"/>
+                            <constraint firstItem="vvR-il-4RF" firstAttribute="leading" secondItem="LMB-7V-yyA" secondAttribute="leadingMargin" constant="-20" id="teD-W7-kZ1"/>
+                            <constraint firstItem="tHn-OE-KJe" firstAttribute="top" secondItem="LMB-7V-yyA" secondAttribute="topMargin" id="zxp-6H-cbE"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="q8A-iO-8Hy"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xvt-D5-J9z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1614" y="1667"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="FWG-oT-eDC">
@@ -64,6 +109,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="ZY2-bS-DiN"/>
                         <segue destination="qia-nN-AXg" kind="relationship" relationship="viewControllers" id="Cm8-Zh-8bL"/>
                         <segue destination="hzK-zP-aC8" kind="relationship" relationship="viewControllers" id="Kkd-5Q-Sv4"/>
+                        <segue destination="gJ3-Lc-5VU" kind="relationship" relationship="viewControllers" id="AFP-90-X5d"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Lr-mj-nbt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -98,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e2v-T7-ynh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1822" y="351"/>
+            <point key="canvasLocation" x="1614" y="-241"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="icy-VK-utb">
@@ -128,7 +174,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gsF-L8-s35" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1822" y="1274"/>
+            <point key="canvasLocation" x="1622" y="738"/>
         </scene>
     </scenes>
 </document>
