--- a/iOSMove/Base.lproj/Main.storyboard
+++ b/iOSMove/Base.lproj/Main.storyboard
@@ -91,14 +91,24 @@
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N0e-Qk-otH">
+                                <rect key="frame" x="-20" y="20" width="640" height="44"/>
+                                <animations/>
+                                <items>
+                                    <navigationItem title="Line chart" id="XCd-6V-ZOW"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="88I-OS-2p2" firstAttribute="centerX" secondItem="Qpe-jN-u3H" secondAttribute="centerX" id="7RT-w5-aqk"/>
+                            <constraint firstItem="N0e-Qk-otH" firstAttribute="top" secondItem="Ubr-PB-RJP" secondAttribute="bottom" id="Lwl-Hx-zFo"/>
                             <constraint firstItem="88I-OS-2p2" firstAttribute="centerY" secondItem="Qpe-jN-u3H" secondAttribute="centerY" id="Qyj-HA-kRf"/>
+                            <constraint firstAttribute="trailing" secondItem="N0e-Qk-otH" secondAttribute="trailing" constant="-20" id="Y2E-VJ-Q7V"/>
                             <constraint firstItem="88I-OS-2p2" firstAttribute="leading" secondItem="Qpe-jN-u3H" secondAttribute="leadingMargin" constant="20" id="ZXq-Tj-psQ"/>
                             <constraint firstItem="SIL-9J-YER" firstAttribute="top" secondItem="88I-OS-2p2" secondAttribute="bottom" constant="20" id="kRb-6E-RqZ"/>
+                            <constraint firstItem="N0e-Qk-otH" firstAttribute="leading" secondItem="Qpe-jN-u3H" secondAttribute="leading" constant="-20" id="p0p-BJ-zes"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="contacts" id="xW0-Ik-522"/>
